unpackaged/main/default/objects/SFDC_Job__c/fields/Committee_Chair__c.field-meta.xml
<CustomField>
    <fullName>Committee_Chair__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Committee Chair</label>
    <referenceTo>Committee_Chair__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>