unpackaged/main/default/objects/SFDC_Job__c/fields/Job_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Job_Compensation__c</fullName>
    <label>Job Compensation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>