unpackaged/main/default/objects/SFDC_Job__c/fields/Job_Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Hire_Date__c</fullName>
    <label>Job Hire Date</label>
    <type>Date</type>
</CustomField>