unpackaged/main/default/objects/SFDC_Job__c/fields/Job_Overview__c.field-meta.xml
<CustomField>
    <fullName>Job_Overview__c</fullName>
    <label>Job Overview</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>