unpackaged/main/default/objects/SFDC_Job__c/fields/No_of_Applicants__c.field-meta.xml
<CustomField>
    <fullName>No_of_Applicants__c</fullName>
    <label>No. of Applicants</label>
    <summaryForeignKey>SFDC_Job_Candidate__c.SFDC_Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>