unpackaged/main/default/objects/SFDC_Job__c/fields/SFDC_Department__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Role</label>
    <referenceTo>SFDC_Department__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>R00N30000001WXBtEAO</relationshipName>
    <type>Lookup</type>
</CustomField>