unpackaged/main/default/objects/SFDC_Job__c/fields/Target_Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Hire_Date__c</fullName>
    <label>Target Hire Date</label>
    <type>Date</type>
</CustomField>