unpackaged/main/default/objects/SFDC_Job__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Job_Overview__c</columns>
    <columns>SFDC_Department__c</columns>
    <columns>Hiring_Manager__c</columns>
    <columns>Job_Status__c</columns>
    <columns>Target_Hire_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>